# Omnific

./: .gitignore  CMakeLists.txt  CMakePresets.json  CMakeSettings.json  LICENSE  README.md  vcpkg-configuration.json  vcpkg.json
Lilliputian/: CMakeLists.txt  Engine.cpp  Engine.hpp  EngineConfiguration.hpp  EngineState.cpp  EngineState.hpp  FileAccess.cpp  FileAccess.hpp  FileSystem.cpp  FileSystem.hpp  HumanInterfaceDevices.cpp  HumanInterfaceDevices.hpp  Lilliputian.hpp  Logger.hpp  OS.cpp  OS.hpp  OSWindow.cpp  OSWindow.hpp  OSWindowInputs.cpp  OSWindowInputs.hpp  Platform.hpp  Profiler.cpp  Profiler.hpp  ThreadPool.hpp  Window.cpp  Window.hpp  main.cpp
Lilliputian/API/: API.cpp  API.hpp
Lilliputian/Core/: Core.cpp  Core.hpp
Lilliputian/Editor/: Editor.cpp  Editor.hpp
Lilliputian/Engines/: AudioEngine.hpp
Lilliputian/Engines/AIEngine/: AIEngine.cpp  AIEngine.hpp
Lilliputian/Engines/AnimationEngine/: AnimationEngine.cpp  AnimationEngine.hpp
Lilliputian/Engines/AudioEngine/: AudioEngine.cpp  AudioEngine.hpp
Lilliputian/Engines/HapticEngine/: HapticEngine.cpp  HapticEngine.hpp
Lilliputian/Engines/PhysicsEngine/: PhysicsEngine.cpp  PhysicsEngine.hpp
Lilliputian/Engines/RenderingEngine/: RenderingEngine.cpp  RenderingEngine.hpp
Lilliputian/Game/: ActionInputs.cpp  ActionInputs.hpp  AnimatedSprite2D.hpp  Assets.cpp  Assets.hpp  Audio.cpp  Audio.hpp  AudioListener2D.cpp  AudioListener2D.hpp  AudioSource2D.cpp  AudioSource2D.hpp  BoxCollider2D.cpp  BoxCollider2D.hpp  Camera2D.cpp  Camera2D.hpp  CountdownTimer.cpp  CountdownTimer.hpp  Entity2D.cpp  Entity2D.hpp  Font.cpp  Font.hpp  Game.cpp  Game.hpp  ProceduralAudioSource2D.hpp  PropertyAnimation.cpp  PropertyAnimation.hpp  RemoteTransform2D.cpp  RigidBody2D.cpp  RigidBody2D.hpp  Scene.cpp  Scene.hpp  Scene2D.cpp  Scene2D.hpp  SceneLayer2D.cpp  SceneLayer2D.hpp  SceneLoader.cpp  SceneLoader.hpp  SceneSerializer.cpp  SceneSerializer.hpp  Script.cpp  (+15 more)
Lilliputian/Game/Scene/: AnimatedSprite2D.cpp  AnimatedSprite2D.hpp  AudioListener2D.cpp  AudioListener2D.hpp  BoxCollider2D.hpp  BoxTriggerArea2D.hpp  Camera2D.cpp  Camera2D.hpp  CircleCollider2D.hpp  CircularItemList.hpp  ConstantDirectionalForce2D.hpp  ConstantPointForce2D.hpp  CountdownTimer.hpp  Entity2D.cpp  Entity2D.hpp  (+18 more)
Lilliputian/ScriptingAPI/: GameAPI.cpp  GameAPI.hpp  ScriptingAPI.cpp
Lilliputian/ScriptingAPIs/: FileAPI.cpp  FileAPI.hpp  InputAPI.hpp  LogAPI.cpp  LogAPI.hpp  RenderAPI.cpp  RenderAPI.hpp  SceneAPI.cpp  SceneAPI.hpp  ScriptingAPIs.cpp  ScriptingAPIs.hpp  ThreadAPI.hpp  TimeAPI.cpp  TimeAPI.hpp  WindowAPI.cpp  WindowAPI.hpp
Lilliputian/UserAPIs/: EditorAPI.cpp  EditorAPI.hpp  EngineAPI.cpp  EngineAPI.hpp  FileAPI.cpp  GameAPI.cpp  GameAPI.hpp  InputAPI.cpp  InputAPI.hpp  LoggingAPI.cpp  LoggingAPI.hpp  SceneAPI.cpp  SceneAPI.hpp  ScriptingAPI.cpp  ScriptingAPI.hpp  WindowAPI.cpp  WindowAPI.hpp
Lilliputian/Utilities/: AABB2D.hpp  Aliases.hpp  Colour.cpp  Colour.hpp  HiResTimer.cpp  HiResTimer.hpp  Image.cpp  Image.hpp  Rectangle.hpp  Transform2D.hpp  Vector2.hpp
LilliputianTests/: CMakeLists.txt  LilliputianTests.hpp  main.cpp
TestGame/: CMakeLists.txt  PongControlAI.cpp  PongControlPlayer.cpp  PongGenerateBall.cpp  PongManageScore.cpp  PongShakeCamera.cpp  QuitOnEscapeKey.cpp  ReturnToMainMenu.cpp  ReturnToMenu.cpp  SceneDefiner.cpp  SceneDefiner.hpp  ScriptCompiler.cpp  ScriptCompiler.hpp  Scripts.hpp  main.cpp
TestGame/PongClone/: ControlAI.cpp  ShakeCamera.cpp
TestGame/Scenes/: DemoSelectionMenu.yml  PongClone.yml
TestGame/Scripts/: PongClone.hpp  PongControlPlayer.cpp  PongGenerateBall.cpp  QuitOnEscapeKey.cpp  QuitOnEscapeKey.hpp  ReturnToMainMenu.cpp  ReturnToMenu.hpp  Scripts.hpp
Tests/: CMakeLists.txt  Tests.cpp  Tests.hpp  main.cpp
src/: CMakeLists.txt
src/application/: CMakeLists.txt  main.cpp
src/demo/: CMakeLists.txt  cpp_tests.cpp  cpp_tests.hpp  demo.cpp  demo.hpp  main.cpp  xyz_scale_sine_wave.cpp  xyz_scale_sine_wave.hpp  y_translation_sine_wave.cpp  y_translation_sine_wave.hpp  z_rotation_sine_wave.cpp  z_rotation_sine_wave.hpp
src/editor/: CMakeLists.txt  cpp_native_assembly.hpp  main.cpp  native.cpp  native.hpp  native_assembly.cpp  native_assembly.hpp  splash_screen_transition.cpp  splash_screen_transition.hpp
src/engine/: CMakeLists.txt  application_api.hpp  asset.cpp  asset.hpp  boot_loader.hpp  command_line.cpp  component.cpp  component.hpp  configuration.cpp  configuration.hpp  engine.cpp  engine.hpp  engine_api.hpp  engine_state.cpp  engine_state.hpp  file_access.cpp  file_access.hpp  human_interface_devices.cpp  human_interface_devices.hpp  logger.hpp  os.cpp  os.hpp  output_system.hpp  profiler.cpp  profiler.hpp  renderable_component.hpp  scene_serializer.cpp  scene_serializer.hpp  scene_storage.cpp  scene_storage.hpp  script_context.cpp  script_context.hpp  serialized_preset_entities.hpp  system.cpp  system.hpp  uid_generator.cpp  uid_generator.hpp  update_system.hpp  window.cpp  window.hpp
src/launcher/: CMakeLists.txt  launcher_main.cpp  main.cpp
src/lilliputian/: CMakeLists.txt  engine.cpp  engine.hpp  engine_state.cpp  human_interface_devices.cpp  main.cpp  os.cpp  profiler.cpp  profiler.hpp  thread_pool.hpp  window.hpp
src/lilliputian_engine/: CMakeLists.txt  engine.cpp  engine.hpp  engine_configuration.hpp  engine_state.hpp  file_access.hpp  human_interface_devices.hpp  os.cpp  os.hpp  profiler.cpp  profiler.hpp  window.cpp
src/lilliputian_main/: CMakeLists.txt
src/main/: CMakeLists.txt  gpu.hpp  main.cpp
src/omnific_demos/: CMakeLists.txt  main.cpp  omnific_demos.cpp  omnific_demos.hpp
src/omnific_engine/: CMakeLists.txt  application_api.hpp  engine.cpp  engine.hpp  omnific_engine.cpp  omnific_engine.hpp
src/omnific_launcher/: CMakeLists.txt  main.cpp
src/omnific_studio/: CMakeLists.txt  cpp_script_assembly.cpp  cpp_script_assembly.hpp  cpp_script_registry.cpp  cpp_script_registry.hpp  main.cpp  omnific_studio.cpp  studio.cpp
src/studio/: CMakeLists.txt  main.cpp  splash_screen_transition.cpp  splash_screen_transition.hpp
tests/: CMakeLists.txt  tests_main.cpp
(+2037 files in other folders)
